2013-06-02  Andy Panov <andypanov@users.sourceforge.net>
	* itpp/base/math/log_exp.h
	pow2 overloads for integer arguments added.

2013-05-24  Bogdan Cristea <cristeab@users.sourceforge.net>
	* CMakeLists.txt, itpp-config.cmake.in, itpp/CMakeLists.txt: add
	configuration script generation for UNIX-like systems (bug #221)

2013-05-24  Bogdan Cristea <cristeab@users.sourceforge.net>
	* doc/local/authors.doc, doc/local/index.doc.in, doc/local/installation.doc,
	doc/local/test.doc, doc/local/verification.doc: documentation updates

2013-05-24  Andy Panov <andypanov@users.sourceforge.net>
	* itpp/srccode/audiofile.cpp, itpp/srccode/audiofile.h, itpp/srccode/audiosample.h, gtests/audiofile_test.cpp: 
	itpp/base/binfile.h, itpp/base/binfile.cpp
	refactoring of audio streams.

2013-05-24  Bogdan Cristea <cristeab@users.sourceforge.net>
	* CMakeLists.txt, doc/local/installation.doc, gtests/commfunc_test.cpp,
	gtests/vec_test.cpp, itpp/CMakeLists.txt: corrections for cygwin and mingw

2013-05-23  Bogdan Cristea <cristeab@users.sourceforge.net>
	* itpp/base/itfile.cpp, itpp/base/parser.cpp, itpp/base/vec.cpp,
	itpp/itexports.h.cmake, itpp/protocol/events.h,
	itpp/protocol/front_drop_queue.h, itpp/protocol/packet.h,
	itpp/protocol/packet_channel.h, itpp/protocol/packet_generator.h,
	itpp/protocol/selective_repeat.h, itpp/protocol/signals_slots.h,
	itpp/protocol/tcp.h, itpp/srccode/audiofile.h: corrected shared library
	compilation with MSVC in debug mode	

2013-05-23  Bogdan Cristea <cristeab@users.sourceforge.net>
	* itpp/signal/fastica.cpp: corrected bug #206

2013-05-22  Bogdan Cristea <cristeab@users.sourceforge.net>
	* gtests/fastmath_test.cpp, gtests/filter_design_test.cpp,
	gtests/filter_test.cpp, gtests/fix_test.cpp, gtests/freq_filt_test.cpp,
	gtests/galois_test.cpp, gtests/gf2mat_test.cpp,
	gtests/histogram_test.cppgtests/histogram_test.cpp,
	gtests/interleaver_test.cpp, gtests/inv_test.cpp, gtests/ldpc_test.cpp,