@@ -1,3 +1,6 @@
+2013-06-16  Bogdan Cristea <cristeab@users.sourceforge.net>
+	* itpp.pc.cmake.in, itpp/CMakeLists.txt: generate and install itpp.pc
+
 2013-06-02  Andy Panov <andypanov@users.sourceforge.net>
 	* itpp/base/math/log_exp.h
 	pow2 overloads for integer arguments added.
